--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1 onclick="getElementById('close-menu').checked = false;">
-                <a href="#intro">logo</a>
+                <a href="#intro"><img src="assets/img/logo-bg.png" alt="" class="logo"></a>
             </h1>
             <nav>
                 <ul onclick="getElementById('close-menu').checked = false;">
